[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Assets/SpriteSheets/UI/brass_theme_1a.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/Default.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Menus/CharacterCreator.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 464, 384, 32, 32 )

[node name="CharacterCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notifications" type="CanvasLayer" parent="."]
layer = 3

[node name="Alert" type="CenterContainer" parent="Notifications"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Notifications/Alert"]
margin_left = 220.0
margin_top = 145.0
margin_right = 420.0
margin_bottom = 215.0
popup_exclusive = true
dialog_text = "Save character and begin?"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreationPanel" type="Panel" parent="HBoxContainer"]
margin_right = 320.0
margin_bottom = 360.0
rect_min_size = Vector2( 320, 360 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CreationPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 90.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 27.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 120.0
margin_bottom = 17.0
theme = ExtResource( 3 )
text = "Character Name:"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 280.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Steeb"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 280.0
margin_bottom = 58.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 9.0
margin_right = 80.0
margin_bottom = 17.0
theme = ExtResource( 3 )
text = "Farm Name:"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 84.0
margin_right = 280.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Tegridy Farms"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 280.0
margin_bottom = 90.0
size_flags_vertical = 3
custom_constants/separation = 32

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_top = 10.0
margin_right = 124.0
margin_bottom = 18.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Gender:"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Male"
flat = true
align = 1
items = [ "Male", null, false, 0, null, "Female", null, false, 1, null, "Other", null, false, 2, null ]
selected = 0

[node name="Button" type="Button" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 280.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Random"

[node name="HBoxContainer2" type="VBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 280.0
margin_bottom = 225.0
size_flags_vertical = 3
alignment = 1

[node name="Skin" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 280.0
margin_bottom = 25.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Skin"]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 16.0
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Skin:"
align = 1

[node name="Panel" type="Panel" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Skin"]
margin_left = 44.0
margin_right = 69.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Skin/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin Color" type="ColorPickerButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Skin/Panel/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hair" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 29.0
margin_right = 280.0
margin_bottom = 54.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair"]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 16.0
size_flags_horizontal = 2
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Hair:"
align = 1

[node name="HairPrev" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair"]
margin_left = 56.0
margin_right = 109.0
margin_bottom = 25.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Current" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair"]
margin_left = 113.0
margin_top = 8.0
margin_right = 166.0
margin_bottom = 16.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Hair"
align = 1

[node name="HairNext" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair"]
margin_left = 170.0
margin_right = 223.0
margin_bottom = 25.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair"]
margin_left = 227.0
margin_right = 280.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair/CenterContainer"]
margin_left = 14.0
margin_right = 39.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin Color" type="ColorPickerButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair/CenterContainer/Panel/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beard" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 58.0
margin_right = 280.0
margin_bottom = 83.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard"]
margin_top = 8.0
margin_right = 52.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Beard:"
align = 1

[node name="BeardPrev" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard"]
margin_left = 56.0
margin_right = 109.0
margin_bottom = 25.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Current" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard"]
margin_left = 113.0
margin_top = 8.0
margin_right = 166.0
margin_bottom = 16.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Beard"
align = 1

[node name="BeardNext" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard"]
margin_left = 170.0
margin_right = 223.0
margin_bottom = 25.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard"]
margin_left = 227.0
margin_right = 280.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard/CenterContainer"]
margin_left = 14.0
margin_right = 39.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin Color" type="ColorPickerButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard/CenterContainer/Panel/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shirt" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 87.0
margin_right = 280.0
margin_bottom = 95.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shirt"]
margin_right = 52.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Shirt:"
align = 1

[node name="ShirtPrev" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shirt"]
margin_left = 56.0
margin_right = 109.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Current" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shirt"]
margin_left = 113.0
margin_right = 166.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Shirt"
align = 1

[node name="ShirtNext" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shirt"]
margin_left = 170.0
margin_right = 223.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5

[node name="EmptyMargin" type="Control" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shirt"]
margin_left = 227.0
margin_right = 280.0
margin_bottom = 8.0
size_flags_horizontal = 3

[node name="Pants" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 99.0
margin_right = 280.0
margin_bottom = 107.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Pants"]
margin_right = 52.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Pants:"
align = 1

[node name="PantsPrev" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Pants"]
margin_left = 56.0
margin_right = 109.0
margin_bottom = 8.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Current" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Pants"]
margin_left = 113.0
margin_right = 166.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "Pants"
align = 1

[node name="PantsNext" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Pants"]
margin_left = 170.0
margin_right = 223.0
margin_bottom = 8.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5

[node name="EmptyMargin" type="Control" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Pants"]
margin_left = 227.0
margin_right = 280.0
margin_bottom = 8.0
size_flags_horizontal = 3

[node name="Shoes" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 111.0
margin_right = 280.0
margin_bottom = 119.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shoes"]
margin_right = 52.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Shoes:"
align = 1

[node name="ShoesPrev" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shoes"]
margin_left = 56.0
margin_right = 109.0
margin_bottom = 8.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Current" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shoes"]
margin_left = 113.0
margin_right = 166.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "Shoes"
align = 1

[node name="ShoesNext" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shoes"]
margin_left = 170.0
margin_right = 223.0
margin_bottom = 8.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5

[node name="EmptyMargin" type="Control" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shoes"]
margin_left = 227.0
margin_right = 280.0
margin_bottom = 8.0
size_flags_horizontal = 3

[node name="Acc" type="HBoxContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 123.0
margin_right = 280.0
margin_bottom = 131.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Acc"]
margin_right = 72.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "Accesory:"
align = 1

[node name="AccPrev" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Acc"]
margin_left = 76.0
margin_right = 118.0
margin_bottom = 8.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Current" type="Label" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Acc"]
margin_left = 122.0
margin_right = 186.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource( 3 )
text = "Accesory"
align = 3
valign = 3

[node name="AccNext" type="TextureButton" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Acc"]
margin_left = 190.0
margin_right = 233.0
margin_bottom = 8.0
size_flags_horizontal = 3
texture_normal = SubResource( 15 )
expand = true
stretch_mode = 5

[node name="EmptyMargin" type="Control" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Acc"]
margin_left = 237.0
margin_right = 280.0
margin_bottom = 8.0
size_flags_horizontal = 3

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 280.0
margin_bottom = 320.0
size_flags_vertical = 3
dragger_visibility = 1

[node name="Back" type="Button" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HSplitContainer"]
margin_right = 134.0
margin_bottom = 91.0
size_flags_horizontal = 3
text = "Back"

[node name="Begin" type="Button" parent="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HSplitContainer"]
margin_left = 146.0
margin_right = 280.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Begin"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 324.0
margin_right = 644.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharPreview" type="Panel" parent="HBoxContainer/CenterContainer"]
margin_top = 90.0
margin_right = 320.0
margin_bottom = 270.0
rect_min_size = Vector2( 320, 180 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="HBoxContainer/CenterContainer/CharPreview" instance=ExtResource( 1 )]
position = Vector2( 156, 84 )
scale = Vector2( 3, 3 )

[node name="Camera2D" parent="HBoxContainer/CenterContainer/CharPreview/Player" index="0"]
visible = false

[connection signal="confirmed" from="Notifications/Alert/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="text_changed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair/HairPrev" to="." method="_on_HairPrev_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Hair/HairNext" to="." method="_on_HairNext_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard/BeardPrev" to="." method="_on_BeardPrev_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Beard/BeardNext" to="." method="_on_BeardNext_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shirt/ShirtPrev" to="." method="_on_ShirtPrev_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shirt/ShirtNext" to="." method="_on_ShirtNext_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Pants/PantsPrev" to="." method="_on_PantsPrev_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Pants/PantsNext" to="." method="_on_PantsNext_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shoes/ShoesPrev" to="." method="_on_ShoesPrev_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Shoes/ShoesNext" to="." method="_on_ShoesNext_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Acc/AccPrev" to="." method="_on_AccPrev_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer2/Acc/AccNext" to="." method="_on_AccNext_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HSplitContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HSplitContainer/Begin" to="." method="_on_Begin_pressed"]

[editable path="HBoxContainer/CenterContainer/CharPreview/Player"]
